2015-08-06  oblivion  <oblivion@case>

	* app/static/css/dashboard.css: Lots of responsive stuff.
	* app/templates/index.html: Fixed rest url for receive speed.
								Update remote host name if connections is greater than last run.
								Added footer.
								Lots of responsive stuff.
								REST servers are configured in config.py
	* config.py: Added SERVICES.
				 Added ALLOWED.
				 Added HOSTS.
	* app/views.py: Added dynamic building of URLs.
				    Reverted speed functions to get local values.
				    Added CORS to all the REST.
				    Count connections on all ports if asked.
				    Return IP is name resolution fails.
				    Adding http:// to ALLOWED.

2015-08-05  oblivion  <oblivion@case>

	* app/templates/index.html: Update remote host every minute, if there's an error.

2015-08-03  oblivion  <oblivion@case>

	* app/__init__.py: Added logging.
	* app/templates/index.html: Spelling.
								Added configurable port.
								Everything is RESTful.
	* config.py: Added PORT.
				 Added DEBUG.
	* app/views.py: PEP8 fixes.
					Everything is RESTful.
					Added logging.
					Get speed from REST on firewall.
					Resolve host name.