@@ -2,11 +2,11 @@
 :since: 01/08/2015
 :author: oblivion
 '''
+from logging import handlers
 import logging
-
 from flask import Flask
 from app import views
-from app.log import logger, init_file_log, init_console_log
+
 
 # Init app and config
 APP = Flask(__name__)
@@ -15,22 +15,32 @@ CONFIG = APP.config
 
 # Start logger
 if APP.config['DEBUG']:
-    init_console_log(logging.DEBUG)
-    init_file_log(logging.DEBUG)
+    APP.logger.setLevel(logging.DEBUG)
+    file_log = handlers.RotatingFileHandler("server-hud.log",
+                                       maxBytes=10000000,
+                                       backupCount=5)
+    file_log.setLevel(logging.DEBUG)
+    file_log.setFormatter(logging.Formatter('%(asctime)s - %(filename)s - %(funcName)s - %(levelname)s: %(message)s'))
+    APP.logger.addHandler(file_log)
 else:
-    init_console_log(logging.CRITICAL)
-    init_file_log(logging.WARNING)
+    APP.logger.setLevel(logging.CRITICAL)
+    file_log = handlers.RotatingFileHandler("server-hud.log",
+                                       maxBytes=10000000,
+                                       backupCount=5)
+    file_log.setLevel(logging.WARNING)
+    file_log.setFormatter(logging.Formatter('%(asctime)s - %(filename)s - %(funcName)s - %(levelname)s: %(message)s'))
+    APP.logger.addHandler(file_log)
 
 # Build all URL using configured services from SERVICES.
-logger.debug("Building urls.")
+APP.logger.debug("Building urls.")
 for service in CONFIG['SERVICES']:
     if service != 'index':
-        logger.debug("Adding: " + '/rest/' + service + ".")
+        APP.logger.debug("Adding: " + '/rest/' + service + ".")
         # Everything but index is REST.
         APP.add_url_rule('/rest/' + service, service, getattr(views, service),
                          methods=['GET', 'OPTIONS'])
     else:
-        logger.debug("Adding: " + "/.")
+        APP.logger.debug("Adding: " + "/.")
         APP.add_url_rule('/', 'index', views.index, methods=['GET'])
 APP.add_url_rule('/rest/services', 'services', getattr(views, 'services'),
                  methods=['GET', 'OPTIONS'])
