@@ -14,8 +14,6 @@ from flask.helpers import make_response
 from flask.json import jsonify
 import psutil
 
-from app.log import logger
-
 
 AVG_RCV_SPEED = 0
 AVG_SEND_SPEED = 0
@@ -30,7 +28,7 @@ def cors_answer_options():
     Handles answering the first part of the CORS request.
     '''
     if 'Origin' in request.headers:
-        logger.debug("CORS request from: " + request.headers['Origin'] + ".")
+        current_app.logger.debug("CORS request from: " + request.headers['Origin'] + ".")
         if request.headers['Origin'] in ('http://' +
                                          host for host in current_app.config['ALLOWED']) \
          and request.headers['Access-Control-Request-Method'] == 'GET' \
@@ -40,7 +38,7 @@ def cors_answer_options():
             resp.headers['Access-Control-Allow-Methods'] = 'GET'
             resp.headers['Access-Control-Allow-Headers'] = 'content-type'
             return resp
-    logger.debug("CORS request failed.")
+    current_app.logger.debug("CORS request failed.")
     abort(401)
 
 
@@ -52,7 +50,7 @@ def add_cors_headers(json):
 
     if 'Origin' in request.headers.keys() \
     and 'content-type' in request.headers:
-        logger.debug('Adding CORS headers to response.')
+        current_app.logger.debug('Adding CORS headers to response.')
         rsp.headers['Access-Control-Allow-Origin'] = request.headers['Origin']
 
     return rsp
@@ -62,7 +60,7 @@ def index():
     '''
     Render the template for the dash board.
     '''
-    logger.debug("Rendering dash board template.")
+    current_app.logger.debug("Rendering dash board template.")
     return render_template('index.html', hostname=getfqdn())
 
 
@@ -70,7 +68,7 @@ def connections():
     '''
     Return a JSON object with number of connections on a port.
     '''
-    logger.debug("Getting active connections.")
+    current_app.logger.debug("Getting active connections.")
 
     if request.method == 'OPTIONS':
         return cors_answer_options()
@@ -79,17 +77,17 @@ def connections():
     # Get connections on port 80
     conn = psutil.net_connections('inet')
     if current_app.config['PORT'] == 'all':
-        logger.debug("Counting all active connections.")
+        current_app.logger.debug("Counting all active connections.")
         for connection in conn:
             active += 1
     else:
-        logger.debug("Counting connections on port: " +
+        current_app.logger.debug("Counting connections on port: " +
                      current_app.config['PORT'] + ".")
         for connection in conn:
             if connection.laddr[1] == int(current_app.config['PORT']):
                 active += 1
     # Return JSON
-    logger.debug("Connections: " + str(active))
+    current_app.logger.debug("Connections: " + str(active))
     return add_cors_headers(jsonify(connections=active))
 
 
@@ -101,7 +99,7 @@ def rcv_speed():
     global LAST_RCV_BYTES
     global LAST_RCV_TIME
 
-    logger.debug("Get average incoming speed.")
+    current_app.logger.debug("Get average incoming speed.")
 
     if request.method == 'OPTIONS':
         return cors_answer_options()
@@ -114,24 +112,24 @@ def rcv_speed():
         if LAST_RCV_TIME == 0:
             LAST_RCV_BYTES = total_bytes_recv
             LAST_RCV_TIME = now
-            logger.debug("First run, no average yet.")
+            current_app.logger.debug("First run, no average yet.")
             return jsonify(speed=0)
 
         time = (now - LAST_RCV_TIME).seconds
-        logger.debug("Sample period: " + str(time) + " seconds.")
+        current_app.logger.debug("Sample period: " + str(time) + " seconds.")
         rcv_bytes = total_bytes_recv - LAST_RCV_BYTES
-        logger.debug("Bytes received: " + str(rcv_bytes) + " bytes.")
+        current_app.logger.debug("Bytes received: " + str(rcv_bytes) + " bytes.")
         speed = (rcv_bytes / time) / 1024
-        logger.debug("Sampled speed: " + str(speed) + "KiB/s.")
+        current_app.logger.debug("Sampled speed: " + str(speed) + "KiB/s.")
 
         AVG_RCV_SPEED = (AVG_RCV_SPEED + speed) / 2
-        logger.debug("Average speed: " + str(AVG_RCV_SPEED) + " KiB/s.")
+        current_app.logger.debug("Average speed: " + str(AVG_RCV_SPEED) + " KiB/s.")
         LAST_RCV_BYTES = total_bytes_recv
         LAST_RCV_TIME = now
     except ZeroDivisionError:
-        logger.warning("Sampling to fast, while sampling incoming speed.")
+        current_app.logger.warning("Sampling to fast, while sampling incoming speed.")
     except KeyError:
-        logger.error("Interface not found.")
+        current_app.logger.error("Interface not found.")
 
     return add_cors_headers(jsonify(speed="{0:.2f}".format(AVG_RCV_SPEED)))
 
@@ -144,7 +142,7 @@ def send_speed():
     global LAST_SEND_BYTES
     global LAST_SEND_TIME
 
-    logger.debug("Get average outgoing speed.")
+    current_app.logger.debug("Get average outgoing speed.")
 
     if request.method == 'OPTIONS':
         return cors_answer_options()
@@ -157,24 +155,24 @@ def send_speed():
         if LAST_SEND_TIME == 0:
             LAST_SEND_BYTES = total_bytes_sent
             LAST_SEND_TIME = now
-            logger.debug("First run, no average yet.")
+            current_app.logger.debug("First run, no average yet.")
             return jsonify(speed=0)
 
         time = (now - LAST_SEND_TIME).seconds
-        logger.debug("Sample period: " + str(time) + " seconds.")
+        current_app.logger.debug("Sample period: " + str(time) + " seconds.")
         sent_bytes = total_bytes_sent - LAST_SEND_BYTES
-        logger.debug("Bytes sent: " + str(sent_bytes) + " bytes.")
+        current_app.logger.debug("Bytes sent: " + str(sent_bytes) + " bytes.")
         speed = (sent_bytes / time) / 1024
-        logger.debug("Sampled speed: " + str(speed) + "KiB/s.")
+        current_app.logger.debug("Sampled speed: " + str(speed) + "KiB/s.")
 
         AVG_SEND_SPEED = (AVG_SEND_SPEED + speed) / 2
-        logger.debug("Average speed: " + str(AVG_SEND_SPEED) + " KiB/s.")
+        current_app.logger.debug("Average speed: " + str(AVG_SEND_SPEED) + " KiB/s.")
         LAST_SEND_BYTES = total_bytes_sent
         LAST_SEND_TIME = now
     except ZeroDivisionError:
-        logger.warning("Sampling to fast, while sampling outgoing speed.")
+        current_app.logger.warning("Sampling to fast, while sampling outgoing speed.")
     except KeyError:
-        logger.error("Interface not found.")
+        current_app.logger.error("Interface not found.")
 
     return add_cors_headers(jsonify(speed="{0:.2f}".format(AVG_SEND_SPEED)))
 
@@ -183,7 +181,7 @@ def uptime():
     '''
     Return uptime of the server process.
     '''
-    logger.debug('Getting up time for "' + current_app.config['PROCESS_NAME'] + '".')
+    current_app.logger.debug('Getting up time for "' + current_app.config['PROCESS_NAME'] + '".')
 
     if request.method == 'OPTIONS':
         return cors_answer_options()
@@ -194,10 +192,10 @@ def uptime():
     # time.
     for process in psutil.process_iter():
         if process.name().find(current_app.config['PROCESS_NAME']) != -1:
-            logger.debug("Process found.")
+            current_app.logger.debug("Process found.")
             proc_time = (datetime.now() -
                          datetime.fromtimestamp(process.create_time()))
-    logger.debug("Up time: " + str(proc_time) + ".")
+    current_app.logger.debug("Up time: " + str(proc_time) + ".")
     proc_time = str(proc_time).split('.')[0]
 
     return add_cors_headers(jsonify(uptime=proc_time))
@@ -207,7 +205,7 @@ def remote_host():
     '''
     Return name of the remote host.
     '''
-    logger.debug("Getting last remote host from access log.")
+    current_app.logger.debug("Getting last remote host from access log.")
 
     if request.method == 'OPTIONS':
         return cors_answer_options()
@@ -220,20 +218,20 @@ def remote_host():
             lines = log_file.readlines()
         log_file.close()
     except IOError:
-        logger.error("Permission denied reading log file: " +
+        current_app.logger.error("Permission denied reading log file: " +
                      current_app.config['ACCESS_LOG'])
-        lines.append("Permission denied reading server log file.")
+        abort(500)
 
-    logger.debug("Log line: " + lines[-1] + ".")
+    current_app.logger.debug("Log line: " + lines[-1] + ".")
     ip_addr = lines[-1].split(' ')[0]
 
     try:
         rhost = socket.gethostbyaddr(ip_addr)
     except (socket.herror, socket.gaierror):
-        logger.debug("DNS bugged out, sending IP: " + ip_addr + ".")
+        current_app.logger.debug("DNS bugged out, sending IP: " + ip_addr + ".")
         return add_cors_headers(jsonify(address=ip_addr))
 
-    logger.debug("Host name from DNS: " + str(rhost) + ".")
+    current_app.logger.debug("Host name from DNS: " + str(rhost) + ".")
     return add_cors_headers(jsonify(address=rhost[0]))
 
 
@@ -252,11 +250,11 @@ def accesses():
             lines = log_file.readlines()
         log_file.close()
     except IOError:
-        logger.error("Permission denied reading log file: " +
+        current_app.logger.error("Permission denied reading log file: " +
                      current_app.config['ACCESS_LOG'])
         lines.append("Permission denied reading server log file.")
 
-    logger.debug("Log line: " + lines[-1] + ".")
+    current_app.logger.debug("Log line: " + lines[-1] + ".")
 
     return add_cors_headers(jsonify(accesses=len(lines)))
 
@@ -266,4 +264,3 @@ def services():
     Return the REST endpoint that are supported.
     '''
     return jsonify(services=current_app.config['SERVICES'])
-
